WIP: Improvements for linux integration and adding addition build targets.

--- a/assets/apple-music.desktop
+++ b/assets/apple-music.desktop
@@ -3,7 +3,7 @@ Type=Application
 Encoding=UTF-8
 Name=Apple Music
 Comment=Apple Music For Linux
-Exec=applemusic
+Exec=apple-music
 Icon=icon.icns
 Terminal=False
 Categories=AudioVideo
