--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,11 @@
 name: Build
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+  - push
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Update build dependencies
+      - name: setup dependencies
         run: |
           sudo apt update
           sudo apt install -y rpm libarchive-tools
@@ -17,4 +14,6 @@ jobs:
         with:
           node-version: "16"
       - run: npm ci
-      - run: npm run build
+      - name: build non-main
+        if: ${{ github.ref != 'refs/heads/main' }}
+        run: npm run build:no-publish
