--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "init": "install",
     "start": "electron ./src",
     "pack": "electron-builder --dir",
-    "build": "electron-builder build",
-    "build:no-publish": "npm run build -- --publish=never"
+    "build": "electron-builder build --publish=never",
+    "release": "electron-builder build --publish always"
   },
   "dependencies": {
     "electron-is-dev": "^2.0.0",
