--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "electron-is-dev": "^2.0.0",
     "electron-preferences": "^2.3.2",
     "electron-window-state": "^5.0.3",
-    "mpris-service": "^2.1.0"
+    "mpris-service": "^2.1.0",
+    "v8-compile-cache": "^2.3.0"
   },
   "devDependencies": {
     "electron": "git+https://github.com/castlabs/electron-releases.git#v13.1.2-wvvmp",
